# mlops2025_WassimChahine_ChaficElHajjChehade

./: README.md  preprocess  pyproject.toml  run_training_pipeline.py
scripts/: batch_inference.py  feature_engineering.py  train.py
